fixed ugly header wrapping in datastream add flow

--- a/views/admin/css/fedora_connector_main.css
+++ b/views/admin/css/fedora_connector_main.css
@@ -79,3 +79,7 @@ p.fedora-connector-search-reset {
 .fedora-connector-datastreams-form label {
     width: 400px;
 }
+
+h1.fedora-nowrap {
+    white-space: nowrap;
+}
